Archive2/e9/27f837341a64d5/output
main.cpp:69:2: error: #endif without #if
 #endif // MyType.h
  ^
